Sat Nov  1 13:56:22 2003                        Michael Jennings (mej)

Documentation updates for doxygen 1.3.x.
----------------------------------------------------------------------
Wed Nov  5 15:05:35 2003                        Michael Jennings (mej)

Oops.  Forgot to fix a couple.
----------------------------------------------------------------------
Wed Nov  5 15:13:24 2003                        Michael Jennings (mej)

Let's try that again, shall we?
----------------------------------------------------------------------
Mon Nov 10 14:28:09 2003                        Michael Jennings (mej)

Added assertions/requirements for string member functions.

Changed pointer printouts to %010p instead of %8p, since the latter
didn't account for the possibility of a leading "0x".

Fixed typos in hex_dump().
----------------------------------------------------------------------
Tue Nov 18 23:15:59 2003                        Michael Jennings (mej)

Added D_*_IF macros for doing debugging conditionals more cleanly.

Removed the bogus "next" member function from the array and vector
interface classes.

Fleshed out the iterator interface and implemented it for arrays.

Fixed stupid mistake that made property functions overly type-strict.

Cleaned up the "show" member functions.

Added a routine for testing a regexp vs. a C string.

Property-ized the URL class objects.
----------------------------------------------------------------------
Wed Nov 19 17:39:01 2003                        Michael Jennings (mej)

Added linked_list and dlinked_list implementations of the vector
interface.

Added iterator functionality for linked_list and dlinked_list.

Added unit tests for the above.
----------------------------------------------------------------------
Fri Nov 21 16:39:23 2003                        Michael Jennings (mej)

Tasty new goodies thanks to Graphviz.
----------------------------------------------------------------------